bk_ida/gccida/c2/cselib_init
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cselib_init/src/cselib.c:1894:1: error: use of undeclared identifier 'hash_table_0'; did you mean 'hash_table'?
hash_table_0 = v3; 
^~~~~~~~~~~~
hash_table
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cselib_init/src/cselib.c:82:15: note: 'hash_table' declared here
static htab_t hash_table;
              ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cselib_init/src/obj/cselib.o] Error 1
